@@ -9,6 +9,9 @@ not yet  BJH  Release 10.65.00
               Build for big-endian machines: fix syntax error so it compiles.
               Broken in 10.63 (June 2013).
 
+              Fix compile failure on system such as OpenBSD that don't have
+              SIGWINCH and SIGIO.
+
 13.09.28 BJH  Release 10.64.00
 
               pngtopam: fix bug: ignores -gamma.  Introduced in 10.48
